@@ -1,4 +1,4 @@
-/*	$OpenBSD: log.h,v 1.5 2002/02/04 12:15:25 markus Exp $	*/
+/*	$OpenBSD: log.h,v 1.6 2002/02/22 12:20:34 markus Exp $	*/
 
 /*
  * Author: Tatu Ylonen <ylo@cs.hut.fi>
@@ -64,5 +64,7 @@ void     debug3(const char *, ...) __attribute__((format(printf, 1, 2)));
 void     fatal_cleanup(void);
 void     fatal_add_cleanup(void (*) (void *), void *);
 void     fatal_remove_cleanup(void (*) (void *), void *);
+
+void	 do_log(LogLevel, const char *, va_list);
 
 #endif
